# aterna

./: Cargo.toml  readme.md
src/: app.rs  main.rs
src/components/: chat.rs  input.rs  mod.rs  select_model.rs
