[package]
name = "aterna"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
reqwest = { version = "0.12", features = ["blocking","json"] }
ratatui = "0.29.0"
tokio ={version="1.47.0", features=["full"]}
dotenv = "0.15.0"
serde = {version="1.0.219",features=["derive","serde_derive"]}
serde_json = "1.0.141"
